--- a/.svelte-kit/output/prerendered/pages/index.html
+++ b/.svelte-kit/output/prerendered/pages/index.html
@@ -5,16 +5,16 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3eadae11.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f164250f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.03e363b9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.879d4299.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5b4e7a0c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3e167c39.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5b9e015e.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ayxhx = {
+					__sveltekit_1u3dz31 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -22,8 +22,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3eadae11.js"),
-						import("./_app/immutable/entry/app.5b4e7a0c.js")
+						import("./_app/immutable/entry/start.f164250f.js"),
+						import("./_app/immutable/entry/app.5b9e015e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
